linter/src/snapshots/squawk_linter__rules__test_rules__ensure_ignored_when_new_table.snap
---
source: linter/src/rules.rs
expression: "check_sql(sql, &[RuleViolationKind::PreferTextField.to_string()])"
---
Ok(
    [],
)
